; ModuleID = '/home/carl/AnghaBench/libgit2/tests/filter/extr_stream.c_writefile.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/filter/extr_stream.c_writefile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@CHUNKSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"empty_standard_repo\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @writefile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @writefile(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %11 = bitcast %struct.TYPE_5__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %11, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %12 = load i32, i32* @CHUNKSIZE, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %6, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %7, align 8
  store i64 0, i64* %8, align 8
  store i64 0, i64* %9, align 8
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @git_buf_joinpath(%struct.TYPE_5__* %5, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = call i32 @cl_git_pass(i32 %17)
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @O_RDWR, align 4
  %22 = load i32, i32* @O_CREAT, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @p_open(i32 %20, i32 %23, i32 438)
  store i32 %24, i32* %10, align 4
  %25 = load i32, i32* %10, align 4
  %26 = icmp sge i32 %25, 0
  %27 = zext i1 %26 to i32
  %28 = call i32 @cl_assert(i32 %27)
  store i64 0, i64* %8, align 8
  br label %29

29:                                               ; preds = %53, %2
  %30 = load i64, i64* %8, align 8
  %31 = load i64, i64* %4, align 8
  %32 = icmp ult i64 %30, %31
  br i1 %32, label %33, label %56

33:                                               ; preds = %29
  store i64 0, i64* %9, align 8
  br label %34

34:                                               ; preds = %45, %33
  %35 = load i64, i64* %9, align 8
  %36 = load i32, i32* @CHUNKSIZE, align 4
  %37 = sext i32 %36 to i64
  %38 = icmp ult i64 %35, %37
  br i1 %38, label %39, label %48

39:                                               ; preds = %34
  %40 = load i64, i64* %8, align 8
  %41 = urem i64 %40, 256
  %42 = trunc i64 %41 to i8
  %43 = load i64, i64* %9, align 8
  %44 = getelementptr inbounds i8, i8* %15, i64 %43
  store i8 %42, i8* %44, align 1
  br label %45

45:                                               ; preds = %39
  %46 = load i64, i64* %9, align 8
  %47 = add i64 %46, 1
  store i64 %47, i64* %9, align 8
  br label %34

48:                                               ; preds = %34
  %49 = load i32, i32* %10, align 4
  %50 = load i32, i32* @CHUNKSIZE, align 4
  %51 = call i32 @p_write(i32 %49, i8* %15, i32 %50)
  %52 = call i32 @cl_git_pass(i32 %51)
  br label %53

53:                                               ; preds = %48
  %54 = load i64, i64* %8, align 8
  %55 = add i64 %54, 1
  store i64 %55, i64* %8, align 8
  br label %29

56:                                               ; preds = %29
  %57 = load i32, i32* %10, align 4
  %58 = call i32 @p_close(i32 %57)
  %59 = call i32 @git_buf_dispose(%struct.TYPE_5__* %5)
  %60 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %60)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @cl_git_pass(i32) #3

declare dso_local i32 @git_buf_joinpath(%struct.TYPE_5__*, i8*, i8*) #3

declare dso_local i32 @p_open(i32, i32, i32) #3

declare dso_local i32 @cl_assert(i32) #3

declare dso_local i32 @p_write(i32, i8*, i32) #3

declare dso_local i32 @p_close(i32) #3

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #3

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
